# DeliveryService

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/DeliveryServer/models/db/user_model/: user_model.py
src/DeliveryServer/models/dto/auth_dto/: auth_dto.py
src/DeliveryServer/models/dto/user_dto/: user_dto.py
src/DeliveryServer/repositories/user_repository/: user_repository.py
src/DeliveryServer/routers/auth_router/: auth_router.py
src/DeliveryServer/routers/user_router/: user_router.py
src/DeliveryServer/server/: server.py
src/DeliveryServer/services/auth_service/: auth_service.py
src/DeliveryServer/services/user_service/: user_service.py
src/DeliveryServer/tests/integration/: auth_integration_test.py  server_integration_test.py
src/DeliveryServer/tests/unit/: database_connection_unit_test.py
src/DeliveryServer/utils/: database_connection.py  database_connection_ssh.py
src/DeliveryServer/utils/data_scripts/: create_all_tables.py
src/DeliveryServer/utils/exceptions/: exeptions.py
